# finance-daily

./: .gitignore  nightly_fetch.sh  pyproject.toml  run_app.sh
.streamlit/: config.toml
finance_daily_config/: tickers.yaml
src/finance_daily/: app.py  cli.py  config.py  constants.py  context.py  shared_types.py  state.py  utils.py
src/finance_daily/components/: __init__.py  news_feed.py  snapshot_table.py  ticker_series_chart.py
src/finance_daily/pages_impl/: fundamentals.py  overview.py  sentiment.py  series.py  trending.py
src/finance_daily/services/: __init__.py  data_fetch.py  nightly_fetch.py
