[project]
name = "finance-daily"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.52.2,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "streamlit-aggrid (>=1.2.1.post2,<2.0.0)",
    "plotly (>=6.5.0,<7.0.0)",
    "streamlit-card (>=1.0.2,<2.0.0)",
    "streamlit-elements (>=0.1.0,<0.2.0)"
]

[project.scripts]
dev = "finance_daily.cli:dev"

[tool.poetry]
packages = [{include = "finance_daily", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

